About page + fix dark mode

--- a/main.css
+++ b/main.css
@@ -21,6 +21,10 @@
 	line-height: 1.3;
 }
 
+.bold {
+	font-weight: 700;
+}
+
 html {
 	display: flex;
 	min-height: 100vh;
@@ -30,12 +34,15 @@ body {
 	padding: 2rem;
 	margin: 0;
 	box-sizing: border-box;
-	background: white;
-	color: black;
+	background: var(--bg-color);
+	color: var(--fg-color);
 	display: flex;
 	flex: 1;
 	min-height: 100vh;
 	transition: background 0.1s, color 0.2s;
+
+	--bg-color: #FFF;
+	--fg-color: #000;
 }
 
 #app {
@@ -49,8 +56,8 @@ body {
 }
 
 body.dark {
-	background: black;
-	color: white;
+	--bg-color: #000;
+	--fg-color: #FFF;
 }
 
 *[disabled] {
@@ -81,6 +88,13 @@ button:active {
 	color: #00e682;
 }
 
+.big-link::after {
+	content: '↗';
+	font-size: 1rem;
+	margin-left: 0.15rem;
+	vertical-align: text-top;
+}
+
 .header {
 	position: relative;
 	display: grid;
@@ -89,6 +103,44 @@ button:active {
 	padding-bottom: 4rem;
 }
 
+.main {
+	position: relative;
+	flex: 1
+}
+
+.about {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	background: var(--bg-color);
+	visibility: hidden;
+	opacity: 0;
+	padding-top: 3.285rem;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-column-gap: 2rem;
+	transition: visibility 175ms, opacity 175ms, background 0.1s;
+	z-index: 2;
+}
+
+.about.open {
+	visibility: visible;
+	opacity: 1;
+}
+
+.about svg {
+	max-width: 100%;
+	height: auto;
+}
+
+.about-text {
+	grid-column: span 2;
+}
+
+.about-text p {
+	margin-bottom: 2rem;
+}
 
 .drop-message {
 	grid-column: span 2;
@@ -122,7 +174,7 @@ button:active {
 }
 
 body.dark .logo svg .fill {
-	fill: black;
+	fill: var(--fg-color);
 }
 
 
@@ -149,6 +201,7 @@ body.dark .logo svg .fill {
 .splash-screen {
 	border-top: 1px solid;
 	padding-top: 0.5rem;
+	margin-top: 3.285rem;
 }
 
 .splash-screen-text {
@@ -192,7 +245,7 @@ body.dark .logo svg .fill {
 
 .specimen-line {
 	display: grid;
-	grid-column: span all;
+	grid-column: span 3;
 	grid-template-columns: subgrid;
 	border-bottom: 1px dotted;
 }
@@ -335,6 +388,18 @@ body.dark .logo svg .fill {
 	padding-bottom: 1rem;
 }
 
+.font-items-scroller.start {
+	mask-image: linear-gradient(to left, rgb(0,0,0,0) 0%, rgb(0,0,0,1) 18%, rgb(0,0,0,1) 20%);
+}
+
+.font-items-scroller.middle {
+	mask-image: linear-gradient(to left, rgb(0,0,0,0) 0%, rgb(0,0,0,1) 18%, rgb(0,0,0,1) 82%, rgb(0,0,0,0) 100%);
+}
+
+.font-items-scroller.end {
+	mask-image: linear-gradient(to right, rgb(0,0,0,0) 0%, rgb(0,0,0,1) 18%, rgb(0,0,0,1) 20%);
+}
+
 .scroll-left-button {
 	position: absolute;
 	top: 0;
@@ -344,16 +409,6 @@ body.dark .logo svg .fill {
 	justify-content: flex-start;
 	align-items: center;
 	z-index: 1;
-}
-
-.scroll-left-overlay {
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 20%;
-	background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 1));
 }
 
 .scroll-right-button {
@@ -366,16 +421,6 @@ body.dark .logo svg .fill {
 	justify-content: flex-end;
 	align-items: center;
 	z-index: 1;
-}
-
-.scroll-right-overlay {
-	position: absolute;
-	pointer-events: none;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	width: 20%;
-	background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%, rgba(255, 255, 255, 1));
 }
 
 .font-items-scroller {
@@ -461,7 +506,7 @@ body.dark .logo svg .fill {
 	position: absolute;
 	top: calc(100% + 1rem + 1px);
 	left: -1.25rem;
-	background: white;
+	background: var(--bg-color);
 	border: 1px dotted;
 	border-bottom-left-radius: 0.35rem;
 	border-bottom-right-radius: 0.35rem;
